--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,6 +25,10 @@ jobs:
                  aria2c -o gcc-arm.tar.gz https://android.googlesource.com/platform/prebuilts/gcc/linux-x86/arm/arm-linux-androideabi-4.9/+archive/refs/tags/android-12.1.0_r27.tar.gz
                  tar -C $HOME/gcc32 -zxf gcc-arm.tar.gz
                  
+       - name: fix bug
+         run: |
+          rm $HOME/clang/bin/ld.lld
+          cat $HOME/clang/bin/lld > $HOME/clang/bin/ld.lld
        - name: build
          run: bash $HOME/vayu/build.sh
          
