--- a/.github/workflows/Kernel.yml
+++ b/.github/workflows/Kernel.yml
@@ -33,16 +33,16 @@ jobs:
          uses: actions/upload-artifact@v3
          with:
           name: Image
-          path: /home/runner/upload/Image          
+          path: /out/arch/arm64/boot/Image-.*          
 
        - name: Upload dtb
          uses: actions/upload-artifact@v3
          with:
           name: dtb
-          path: /home/runner/upload/dtb
+          path: /home/runner/out/arch/arm64/boot/dts/qcom/*.dtb
 
        - name: Upload dtb
          uses: actions/upload-artifact@v3
          with:
           name: dtbo.img
-          path: /home/runner/upload/dtbo.img
+          path: /home/runner/out/arch/arm64/boot/dtbo.img
