--- a/.github/workflows/Kernel.yml
+++ b/.github/workflows/Kernel.yml
@@ -22,27 +22,20 @@ jobs:
        - name: build
          run: bash $HOME/vayu/build.sh
 
-       - name: build
-         run: |
-          mkdir -p -v $HOME/upload
-          cp out/arch/arm64/boot/Image $HOME/upload
-          cat out/arch/arm64/boot/dts/qcom/*.dtb > $HOME/upload
-          cp out/arch/arm64/boot/dtbo.img $HOME/upload         
-         
        - name: Upload image
          uses: actions/upload-artifact@v3
          with:
           name: Image
-          path: /out/arch/arm64/boot/Image-.*          
+          path: /home/runner/vayu/out/arch/arm64/boot/Image         
 
        - name: Upload dtb
          uses: actions/upload-artifact@v3
          with:
           name: dtb
-          path: /home/runner/out/arch/arm64/boot/dts/qcom/*.dtb
+          path: /home/runner/vayu/out/arch/arm64/boot/dts/qcom/*.dtb
 
-       - name: Upload dtb
+       - name: Upload dtbo
          uses: actions/upload-artifact@v3
          with:
           name: dtbo.img
-          path: /home/runner/out/arch/arm64/boot/dtbo.img
+          path: /home/runner/vayu/out/arch/arm64/boot/dtbo.img
