--- a/.github/workflows/Neutron.yml
+++ b/.github/workflows/Neutron.yml
@@ -15,12 +15,16 @@ jobs:
          
        - name: google clang and gcc
          run: |
-          git clone https://android.googlesource.com/platform/prebuilts/gcc/linux-x86/aarch64/aarch64-linux-android-4.9.git --depth=1 -b android-msm-coral-4.14-t-preview-2 $HOME/gcc64
-          git clone https://android.googlesource.com/platform/prebuilts/gcc/linux-x86/arm/arm-linux-androideabi-4.9.git --depth=1 -b android-msm-coral-4.14-t-preview-2 $HOME/gcc32
-          git clone https://gitlab.com/crdroidandroid/android_prebuilts_clang_host_linux-x86_clang-r530567.git --depth=1 -b 14.0 $HOME/clang
-          export PATH="$HOME/gcc64/bin:$PATH
-          export PATH="$HOME/gcc32/bin:$PATH
-          export PATH="$HOME/clang/bin:$PATH
+                 mkdir -p -v $HOME/gcc64
+                 aria2c -o gcc-aarch64.tar.gz https://android.googlesource.com/platform/prebuilts/gcc/linux-x86/aarch64/aarch64-linux-android-4.9/+archive/refs/tags/android-14.0.0_r0.108.tar.gz
+                 tar -C $HOME/gcc64 -zxf gcc-aarch64.tar.gz
+                 mkdir -p -v $HOME/gcc32
+                 aria2c -o gcc-arm.tar.gz https://android.googlesource.com/platform/prebuilts/gcc/linux-x86/arm/arm-linux-androideabi-4.9/+archive/refs/tags/android-14.0.0_r0.108.tar.gz
+                 tar -C $HOME/gcc32 -zxf gcc-arm.tar.gz
+                 git clone https://gitlab.com/crdroidandroid/android_prebuilts_clang_host_linux-x86_clang-r530567.git --depth=1 -b 14.0 $HOME/clang
+                 export PATH="$HOME/gcc64/bin:$PATH
+                 export PATH="$HOME/gcc32/bin:$PATH
+                 export PATH="$HOME/clang/bin:$PATH
                  
        - name: build
          run: bash $HOME/vayu/build.sh
