--- a/.github/workflows/Neutron.yml
+++ b/.github/workflows/Neutron.yml
@@ -22,9 +22,9 @@ jobs:
                  aria2c -o gcc-arm.tar.gz https://android.googlesource.com/platform/prebuilts/gcc/linux-x86/arm/arm-linux-androideabi-4.9/+archive/refs/tags/android-14.0.0_r0.108.tar.gz
                  tar -C $HOME/gcc32 -zxf gcc-arm.tar.gz
                  git clone https://gitlab.com/crdroidandroid/android_prebuilts_clang_host_linux-x86_clang-r530567.git --depth=1 -b 14.0 $HOME/clang
-                 export PATH="$HOME/gcc64/bin:$PATH
-                 export PATH="$HOME/gcc32/bin:$PATH
-                 export PATH="$HOME/clang/bin:$PATH
+                 export PATH="$HOME/gcc64/bin:$PATH"
+                 export PATH="$HOME/gcc32/bin:$PATH"
+                 export PATH="$HOME/clang/bin:$PATH"
                  
        - name: build
          run: bash $HOME/vayu/build.sh
