--- a/.github/workflows/Neutron.yml
+++ b/.github/workflows/Neutron.yml
@@ -27,7 +27,7 @@ jobs:
                  export PATH="$HOME/clang/bin:$PATH"
                  
        - name: build
-         run: bash $HOME/vayu/build.sh
+         run: wget https://raw.githubusercontent.com/Yaroslav51-dev/kernel_build/main/script/build_google.sh -P $HOME/vayu && bash $HOME/vayu/build_google.sh
 
        - name: Upload image
          uses: actions/upload-artifact@v3
