--- a/.github/workflows/WeebX.yml
+++ b/.github/workflows/WeebX.yml
@@ -11,7 +11,7 @@ jobs:
       contents: write
     steps:          
        - name: git clone
-         run: git clone --depth=1 https://github.com/AnymoreProject/kernel_xiaomi_vayu.git -b Anymore $HOME/vayu
+         run: git clone --depth=1 https://github.com/MiCode/Xiaomi_Kernel_OpenSource.git -b vayu-r-oss $HOME/vayu 
          
        - name: google gcc
          run: |
