--- a/.github/workflows/Neutron.yml
+++ b/.github/workflows/Neutron.yml
@@ -1,4 +1,4 @@
-name: Build with Neutron gcc and clang
+name: Build with Google gcc and clang
 
 on:
   workflow_dispatch:
@@ -11,7 +11,7 @@ jobs:
       contents: write
     steps:          
        - name: git clone
-         run: git clone --depth=1 https://github.com/MiCode/Xiaomi_Kernel_OpenSource.git -b vayu-r-oss $HOME/vayu
+         run: git clone --depth=1 https://github.com/MiCode/Xiaomi_Kernel_OpenSource.git -b liuqin-t-oss $HOME/vayu
          
        - name: google clang and gcc
          run: |
