--- a/.github/workflows/Google.yml
+++ b/.github/workflows/Google.yml
@@ -11,7 +11,7 @@ jobs:
       contents: write
     steps:          
        - name: git clone
-         run: git clone --depth=1 https://github.com/Yaroslav51-dev/MiCode_Kernel_Vayu.git -b vayu-r-oss $HOME/vayu
+         run: git clone --depth=1 https://github.com/Yaroslav51-dev/android_kernel_xiaomi_liuqin.git -b main $HOME/vayu
 
        - name: google clang and gcc
          run: |
